[metadata]
name = Xenopsychus
author = Mark Fiers
author_email = mark.fiers.42@gmail.com
version = file: VERSION.txt
classifiers =
    Programming Language :: Python :: 3

[options]
packages = xenopsychus
include_package_data = True
python_requires = >=3.9
install_requires =
    importlib; python_version == "2.6"
    matplotlib
    numpy
    pandas

# [options.entry_points]
# console_scripts =
#     mus = mus.cli:cli
#     mus-hist = mus.cli.hist:cli